tests/baselines/reference/parserGreaterThanTokenAmbiguity19.errors.txt
parserGreaterThanTokenAmbiguity19.ts(2,1): error TS1109: Expression expected.


==== parserGreaterThanTokenAmbiguity19.ts (1 errors) ====
    1 >>>
    = 2;
    ~
!!! error TS1109: Expression expected.